[package]
name = "rusticache"
description = "Simple caching for rust without external requirements."
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/bleikurr/rusticache"
repository = "https://github.com/bleikurr/rusticache"
readme = "README.md"
keywords = ["cache", "caching", "asynchronous"]
categories = ["caching", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = [ "sync"] }


[dev-dependencies]
tokio = { version = "1.20.1", features = [ "rt-multi-thread", "macros", "time" ] }

